# blog-engine

./: .gitignore  LICENSE  build_files.sh  netlify.toml  pyproject.toml  requirements.txt  vercel.json
backend/backend/: settings.py
dotenv_files/: .env-example
engine/backend/: settings.py  urls.py  wsgi.py
engine/blog/: admin.py  models.py  urls.py  views.py
engine/blog/migrations/: 0001_initial.py  0002_alter_page_is_published_alter_page_slug.py  0003_alter_page_is_published.py  0004_alter_page_options_alter_page_is_published_post.py  0005_rename_create_at_post_created_at_post_created_by_and_more.py  0006_postattachment.py
engine/blog/static/blog/css/: style.css
engine/blog/templates/blog/: base.html
engine/blog/templates/blog/pages/: about.html  index.html  post.html
engine/blog/templates/blog/partials/: _footer.html  _head.html  _header.html  _pagination.html  _post-card.html
engine/blog_setup/: admin.py  apps.py  context_processors.py  models.py
engine/blog_setup/migrations/: 0001_initial.py  0002_menulinkadmin.py  0003_blogsetup_delete_menulinkadmin.py  0004_menulink_blog_setup.py  0005_blogsetup_favicon.py  0006_alter_blogsetup_favicon.py
engine/setup/: models.py
engine/utils/: images.py  model_validators.py  randoms.py
